fixed some spacing issues

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -8,11 +8,13 @@
 
 .top {
   align-items: self-start;
+  justify-content: center;
   display: flex;
   flex-direction: column;
-  padding: 44px 64px;
+  padding: 0 64px 0 64px;
   width: 100%;
   z-index: 2;
+  height: 100vh;
 }
 
 .bg {
@@ -40,8 +42,9 @@
 }
 
 .logo {
-  margin-bottom: 84px;
-  padding: 64px 0 0 64px;
+  left: 50px;
+  position: fixed;
+  top: 64px;
 }
 
 .ctas {
@@ -147,29 +150,10 @@
   user-select: none;
 }
 
-.logoLarge img,
-.init img {
+.logoLarge img {
   width: 60%;
 }
 
-.init {
-  animation: init 3s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-  align-items: center;
-  background-color: #FF79E9;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  position: fixed;
-  transition: .35s all;
-  width: 100%;
-  z-index: 3;
-}
-
-.init svg {
-  animation: pulsateInit 1s infinite;
-}
 
 
 /* Tablet and Smaller Desktop */
@@ -177,11 +161,14 @@
   .top {
     padding: 0 18px;
     align-items: center;
+    height: unset;
+    margin-top: 140px;
   }
 
   .logo {
-    margin-bottom: 44px;
-    padding: 64px 0 0 18px;
+    left: 18px;
+    position: absolute;
+    top: 64px;
   }
 
   .ctas {
@@ -229,7 +216,7 @@
     left: 0;
     height: 100%;
     padding: 80px 0;
-    margin-top: 100px;
+    margin-top: 58px;
     right: unset;
     position: relative;
     width: 100%;
@@ -253,44 +240,6 @@
     box-shadow: 0 0 0 32px #38383800;
   }
 }
-
-@keyframes init {
-  0% {
-    top: 0;
-  }
-
-  50% {
-    top: 0;
-  }
-
-  65% {
-    opacity: 1;
-  }
-
-  100% {
-    display: none;
-    opacity: 0;
-    top: 100vh;
-  }
-}
-
-@keyframes pulsateInit {
-  0% {
-    height: 30%;
-    width: 30%;
-  }
-
-  50% {
-    height: 35%;
-    width: 35%;
-  }
-
-  100% {
-    height: 30%;
-    width: 30%;
-  }
-}
-
 
 @keyframes logoMove {
   0% {
